<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    android:scrollbarSize="25sp"
    tools:context=".MainActivity">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Who is the father of India"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_male" />
        <RadioButton
            android:id="@+id/radioGale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_gale" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_female"
            android:checked="true"/>

    </RadioGroup>
    <TextView
        android:id="@+id/text_view_question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="What is the National Tree of India."
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radiotree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radiobanyan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_banyan"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioneem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_neem" />

        <RadioButton
            android:id="@+id/radiotulasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_tulasi" />

    </RadioGroup>
    <TextView
        android:id="@+id/text_view_question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Which is the National bird of India."
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radiobird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radiopeacock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_peacock" />

        <RadioButton
            android:id="@+id/radiocrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_crow" />

        <RadioButton
            android:id="@+id/radiosparrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_sparrow"
            android:checked="true"/>

    </RadioGroup>

    <TextView
        android:id="@+id/text_view_question3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Which is the National Animal of India."
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radioanimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radiotiger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_tiger" />

        <RadioButton
            android:id="@+id/radiofox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_fox"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radiolion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_lion" />

    </RadioGroup>
    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_display" />

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="79dp" />

</LinearLayout>
</ScrollView>